deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: apache
      version: v1
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: apache
        version: v1
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: node-role.kubernetes.io/worker
                operator: In
                values:
                - ""
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: apache
        image: quay.io/szobair/frontend
        #image: image-registry.openshift-image-registry.svc:5000/openshift/frontend:v2
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: www-volume
          mountPath: /var/www/html
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: "200m"
            memory: 250Mi
      volumes:
        - name: www-volume
          configMap:
            name: www-data
            defaultMode: 0660
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-pg
  labels:
    app: apache
    version: v1
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: apache
    version: v1
